# wheels.uz

./: README.md  db.sqlite3  pyproject.toml
core/: asgi.py  db.sqlite3  settings.py
core/core/: settings.py  urls.py
core/wheel/: admin.py  apps.py  auth.py  models.py  router.py  serializers.py  views.py
core/wheel/migrations/: 0001_initial.py  0002_alter_detail_lenght_alter_detail_width.py  0002_alter_wheelimages_image.py  0002_categorysizes_category_sizes.py  0002_rename_category_detail_wheel_and_more.py  0003_alter_wheel_details.py  0003_alter_wheel_price_alter_wheelimages_image.py  0003_order_detail_width_alter_wheel_category_and_more.py  0004_alter_category_image.py  0004_alter_order_passport_image.py  0004_detail_lenght.py  0005_order_wheels_wheel_description.py  0005_remove_detail_lenght_detail_length_and_more.py  0005_wheel_images_alter_wheel_climate_alter_wheel_size_and_more.py  0006_detail_month_3_price_detail_month_6_price_and_more.py  0006_remove_order_wheels_order_details_order_is_checked_and_more.py  0006_remove_wheel_category_wheel_category.py  0007_alter_order_phone_number.py  0007_remove_detail_wheel_reference_id.py  0007_remove_wheel_size_category_size.py  0008_remove_order_passport_number_order_passport_image.py  0008_remove_order_quantity.py  0008_size_remove_category_size_category_sizes.py  0009_order_quantity.py  0009_remove_wheel_category_wheel_size.py  0009_wheel_company.py  (+7 more)
wheel/: admin.py  auth.py  models.py  serializers.py  signals.py  views.py
wheel/migrations/: 0001_initial.py  0002_order_bot_sended_alter_category_sizes.py
