[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["rokki"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
djangorestframework = "^3.15.1"
whitenoise = "^6.6.0"
pillow = "^10.3.0"
django-cors-headers = "^4.3.1"
python-decouple = "^3.8"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
